<resources>
    <string name="app_name">Smoothie</string>
    <string name="what_to_eat_text">Что сегодня приготовить?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test_text_recipe">Подготовить продукты для смузи из моркови с яблоком и апельсином. Фото приготовления рецепта: Морковный смузи с яблоком и апельсином - шаг №2 Морковь почистить и порезать кубиками. Фото приготовления рецепта: Морковный смузи с яблоком и апельсином - шаг №3 Яблоко очистить от кожуры и нарезать кубиками. Фото приготовления рецепта: Морковный смузи с яблоком и апельсином - шаг №4 Апельсин порезать пополам и выжать сок. Фото приготовления рецепта: Морковный смузи с яблоком и апельсином - шаг №5 В чашу миксера влить выжатый сок с мякотью апельсина, отправить туда порезанные морковь и яблоко, добавить половину ложки семян льна. Фото приготовления рецепта: Морковный смузи с яблоком и апельсином - шаг №6 Взбивать сначала в режиме пульсации, а затем на медленной скорости до однородного состояния. Фото приготовления рецепта: Морковный смузи с яблоком и апельсином - шаг №7 Разлить морковный смузи с яблоком и апельсином по бокалам, присыпать семенами льна. Фото приготовления рецепта: Морковный смузи с яблоком и апельсином - шаг №8 Подать к столу. Приятного аппетита!</string>
    <string name="test_text_ingredients">Банан – 2 шт. (400 г)\nМолоко – 400 мл\nОвсяные хлопья – 8 ст.л.\nКорица - 0.5 ч.л. (по желанию)\nМед – по необходимости</string>
    <string name="test_text_description">Смузи из яблок, моркови и апельсина – вкусный и полезный напиток для завтрака, который придаст бодрости на весь день. В этом рецепте нет никаких подсластителей, поэтому он идеально подойдёт всем, кто считает калории и бережёт свою фигуру!</string>
    <!-- Preference Titles -->
    <string name="settings_profile_header">Настройки профиля</string>
    <string name="settings_random">Настройки рандома</string>
    <string name="search_by">Найди рецепт</string>

    <!-- Messages Preferences -->
    <string name="nickname_header">Уникальное имя пользователя:</string>
    <string name="access">Доступ к вашим рецептам</string>

    <!-- Sync Preferences -->
    <string name="time_of_day">Учитывать время суток</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="degree_of_significance">Степень значимости времени суток</string>
    <string name="add_button">Добавить</string>
    <string name="hint_name_recipe">Название рецепта</string>
    <string name="ingredients">Ингредиенты:</string>
    <string name="hint_input_ingredients">Задайте ингредиенты</string>
    <string name="recipe">Рецепт</string>
    <string name="hint_input_recipe">Опешите рецепт</string>
    <string name="description">Описание:</string>
    <string name="hint_short_description">Кратко опишите полученное блюдо</string>
    <string name="test_smoothie">Смузи</string>
    <string name="prev">Предыдущий</string>
    <string name="next">Следующий</string>
    <string name="add_image">Добавление изображения</string>
    <string name="preview">Превью</string>
    <string name="error_text_connect">Ошибка!\n Пожалуйста повторите позже</string>
    <string name="repeat">Повторить</string>
    <string name="error_change_favorite">Не удалось обновить метку</string>
    <string name="error_delete">Не удалось удалить рецепт</string>
    <string name="star_button">Star button</string>
    <string name="delete_button">Delete Button</string>
    <string name="error_load_image">Не удалось загрузить изображение!</string>
    <string name="add_mark_for_find">Выберите катеогрии для поиска</string>
    <string name="supper">Ужин</string>
    <string name="input_name_category">Введите название категории</string>
    <string name="delete_category_help">(Для удаления категории зажимайте её на 3 секунды)</string>


</resources>