<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_random">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/time_of_day" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:summaryOn="@string/degree_of_significance"
            app:summaryOff="@string/degree_of_significance" />

        <SeekBarPreference
            app:key="seek_bar"
            app:showSeekBarValue="true"
            />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_profile_header">

        <EditTextPreference
            app:defaultValue="Имя не задано"
            app:key="nickname"
            app:title="@string/nickname_header"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/access_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/access"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>