<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="screens.AddRecipeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:text="@string/add_button"
            app:layout_constraintDimensionRatio="1:0.381"
            app:layout_constraintEnd_toEndOf="@+id/editText_name_recipe"
            app:layout_constraintStart_toStartOf="@+id/editText_name_recipe"
            app:layout_constraintTop_toBottomOf="@+id/entering_description_Layout" />

        <EditText
            android:id="@+id/editText_name_recipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:autofillHints="username"
            android:ems="10"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_name_recipe"
            android:inputType="textCapSentences"
            android:text=""
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/image"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_marginTop="36dp"
            android:background="@drawable/ic_baseline_add_photo_alternate_24"
            android:backgroundTint="@color/carrot"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_name_recipe" />

        <TextView
            android:id="@+id/textView_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/oswald"
            android:text="@string/ingredients"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/guideline_headers"
            app:layout_constraintTop_toBottomOf="@+id/image" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_headers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.03" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/entering_ingredients_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_ingredients">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/entering_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_input_ingredients"
                android:inputType="textCapSentences|textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView_recipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:fontFamily="@font/oswald"
            android:text="@string/recipe"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/guideline_headers"
            app:layout_constraintTop_toBottomOf="@+id/entering_ingredients_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/entering_recipe_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_recipe">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/entering_recipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_input_recipe"
                android:inputType="textCapSentences|textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:fontFamily="@font/oswald"
            android:text="@string/description"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/guideline_headers"
            app:layout_constraintTop_toBottomOf="@+id/entering_recipe_Layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/entering_description_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/entering_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_short_description"
                android:inputType="textCapSentences|textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
