<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:adjustViewBounds="true"
        app:shapeAppearanceOverlay="@style/roundedImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_baseline_image_48"
        app:layout_constraintDimensionRatio="1:1"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/name_recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:lines="2"
        android:text=""
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toRightOf="@+id/image"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="image"
        app:barrierDirection="bottom"/>
    <Space
        android:layout_width="wrap_content"
        android:layout_height="6dp"
        app:layout_constraintTop_toBottomOf="@+id/barrier"
        />

    <ImageView
        android:id="@+id/deleteImageView"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:contentDescription="@string/delete_button"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_delete"
        android:layout_marginEnd="10dp"
        android:padding="4dp"
        app:tint="@color/inactive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/starImageView"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:contentDescription="@string/star_button"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:layout_marginEnd="15dp"
        android:padding="4dp"
        android:src="@drawable/ic_star_outline"
        app:tint="@color/inactive"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/deleteImageView"/>

    <ProgressBar
        android:id="@+id/userProgressBar"
        android:layout_width="36dp"
        android:layout_height="36dp"
        app:layout_constraintStart_toStartOf="@id/starImageView"
        app:layout_constraintEnd_toEndOf="@id/deleteImageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>